chore: respect nulls in WrapperPlayServerEntityEquipment